@@ -1,7 +1,7 @@
 #' @export
 #' @rdname SupervisedTask
-makeSurvTask = function(id, data, target, weights, blocking, check.data=TRUE) {
-  addClasses(makeSupervisedTask("surv", id, data, target, weights, blocking, NA_character_, check.data),
+makeSurvTask = function(id, data, target, weights, blocking, fixup.data = "warn", check.data = TRUE) {
+  addClasses(makeSupervisedTask("surv", id, data, target, weights, blocking, NA_character_, fixup.data, check.data),
     "SurvivalTask")
 }
 
